<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.zxp.profileapk.view.MainActivity">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/topbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_adoutme"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

        <com.zxp.profileapk.circlrimageview.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="0.6"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="25sp"/>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/position"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/location"/>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_worktime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/worktime"/>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_worktime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
